# telegram-jadicts-bot

./: .gitignore  README.md  _env.py  bot.py  command_helper.py  command_parser.py  commands.py  kana_convert.py  logging_utils.py  pyproject.toml  requirements.in  requirements.txt
